Data table, Fix for issues: 1. WMS-9112: Lengthy Group names cut-off in Run mode 2. WMS-9140: Actions field is visible in fields tab in some scenarios

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -1896,11 +1896,6 @@ If the height and width are not specified the video takes the height of the post
               cursor: default;
             }
           }
-          &.app-datagrid-group-header-cell {
-            .header-data {
-              display: block;
-            }
-          }
         }
         .table-condensed {
           .sort-buttons-container {
